--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,15 +1,14 @@
 name: Node CI
 on:
   push:
-    branches: [ main ]
+    branches: 
+      - main
   pull_request:
     branches: [ main ]
 jobs:
-  cli:
+  Lint:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        node-version: [18.x, 20.x]  
+    
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -17,15 +16,33 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: ${{ matrix.node-version }}
+          node-version: 20
           cache: 'npm'
 
       - name: Install deps
         run: npm ci
       - name: lint
         run: npm run lint
+jobs:
+  test:
+    runs-on: ubuntu-latest
+    
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: 20
+          cache: 'npm'
+
+      - name: Install deps
+        run: npm ci
+    
       - name: Run tests
         run: npm test    
+
 
 
     
